force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/Bid_Contract_Tender_Information_Form__c.object-meta.xml
<CustomObject>
    <label>Bid-Contract-Tender Information Form</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Bid-Contract Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid-Contract-Tender Information Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>