force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Anticipated_annual_dollar_revenue__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_annual_dollar_revenue__c</fullName>
    <label>Anticipated annual dollar revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>