force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Anticipated_annual_pair_volume__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_annual_pair_volume__c</fullName>
    <label>Anticipated annual pair volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>