force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Backorders_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Backorders_Accepted__c</fullName>
    <label>Backorders Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>