force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Bid_Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Contract_Due_Date__c</fullName>
    <label>Bid/Contract Due Date</label>
    <type>Date</type>
</CustomField>