force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Bid_Number__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number__c</fullName>
    <label>Bid Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>