force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/BTC_Includes_Subsidiaries_or_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>BTC_Includes_Subsidiaries_or_Affiliates__c</fullName>
    <inlineHelpText>Indicates whether the organizations subsidiaries or affiliates are included as a part of the Bid/Tender/Contract.</inlineHelpText>
    <label>BTC Includes Subsidiaries or Affiliates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>