force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>Enter the Legal Name of the Company</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>