force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Discount_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discount_Comments__c</fullName>
    <label>Discount Comments</label>
    <type>TextArea</type>
</CustomField>