force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method__c</fullName>
    <label>Distribution Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RW Direct</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>