force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>