force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Distributor_Details__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Details__c</fullName>
    <label>Distributor Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>