force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Existing_relationship_with_company__c.field-meta.xml
<CustomField>
    <fullName>Existing_relationship_with_company__c</fullName>
    <label>Existing relationship with company?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>