force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Federal_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID_Number__c</fullName>
    <label>Federal Tax ID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>