force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Footwear_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Footwear_Requirements__c</fullName>
    <label>Footwear Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>