force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/If_In_Store_List_Stores_or_Region__c.field-meta.xml
<CustomField>
    <fullName>If_In_Store_List_Stores_or_Region__c</fullName>
    <label>If In Store, List Stores or Region</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>