force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/If_Shoemobile_List_Truck_Store_s__c.field-meta.xml
<CustomField>
    <fullName>If_Shoemobile_List_Truck_Store_s__c</fullName>
    <label>If Shoemobile, List Truck Store(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>