force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/If_yes_Please_describe__c.field-meta.xml
<CustomField>
    <fullName>If_yes_Please_describe__c</fullName>
    <label>If yes Please describe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>