force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/If_Yes_Process_or_policy_concerns__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Process_or_policy_concerns__c</fullName>
    <label>If Yes Process or policy concerns?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>