force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Length_of_Contract_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Contract_in_Years__c</fullName>
    <label>Length of Contract in Years</label>
    <length>25</length>
    <type>Text</type>
</CustomField>