force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Marketing_Funds_if__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Funds_if__c</fullName>
    <label>Marketing Funds (if %)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.0%</fullName>
            </value>
            <value>
                <fullName>2.5%</fullName>
            </value>
            <value>
                <fullName>3.0%</fullName>
            </value>
            <value>
                <fullName>5.0%</fullName>
            </value>
            <value>
                <fullName>7.0%</fullName>
            </value>
            <value>
                <fullName>9.0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>