force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Maximum_Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Subsidy_Amount__c</fullName>
    <label>Maximum Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>