force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Product_Types__c.field-meta.xml
<CustomField>
    <fullName>Product_Types__c</fullName>
    <label>Product Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Garments</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>