force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Proposed_First_Ship__c.field-meta.xml
<CustomField>
    <fullName>Proposed_First_Ship__c</fullName>
    <label>Proposed First Ship</label>
    <type>Date</type>
</CustomField>