force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Servicing_Method__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Method__c</fullName>
    <label>Servicing Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Shoemobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>