force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Servicing_Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Store_Type__c</fullName>
    <label>Servicing Store Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Owned</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Branded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>