force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Special_Clarification_and_Product_Reqmts__c.field-meta.xml
<CustomField>
    <fullName>Special_Clarification_and_Product_Reqmts__c</fullName>
    <label>Special Clarification and Product Reqmts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>