force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Special_Make_Up_Bespoke_Reqmts__c.field-meta.xml
<CustomField>
    <fullName>Special_Make_Up_Bespoke_Reqmts__c</fullName>
    <label>Special Make Up / Bespoke Reqmts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>