force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Technical_Reqmts_Microsite_Portal_Other__c.field-meta.xml
<CustomField>
    <fullName>Technical_Reqmts_Microsite_Portal_Other__c</fullName>
    <label>Technical Reqmts, Microsite/Portal/Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>