force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/fields/Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount__c</fullName>
    <label>Volume Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5%</fullName>
            </value>
            <value>
                <fullName>2.0%</fullName>
            </value>
            <value>
                <fullName>3.0%</fullName>
            </value>
            <value>
                <fullName>4.0%</fullName>
            </value>
            <value>
                <fullName>5.0%</fullName>
            </value>
            <value>
                <fullName>5.7% sales discount + 0.5% def. allowance (all on PL)</fullName>
            </value>
            <value>
                <fullName>6.0%</fullName>
            </value>
            <value>
                <fullName>6.5%</fullName>
            </value>
            <value>
                <fullName>7.0%</fullName>
            </value>
            <value>
                <fullName>7.2%</fullName>
            </value>
            <value>
                <fullName>8.0%</fullName>
            </value>
            <value>
                <fullName>8.5%</fullName>
            </value>
            <value>
                <fullName>9.0%</fullName>
            </value>
            <value>
                <fullName>10.0%</fullName>
            </value>
            <value>
                <fullName>12.0%</fullName>
            </value>
            <value>
                <fullName>12.5%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>Buying Program</fullName>
            </value>
            <value>
                <fullName>WH + $5</fullName>
            </value>
            <value>
                <fullName>See comments below for Discount Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>