force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/recordTypes/North_America_Industrial.recordType-meta.xml
<RecordType>
    <fullName>North_America_Industrial</fullName>
    <active>true</active>
    <label>North America Industrial</label>
</RecordType>