force-app/main/default/objects/Bid_Contract_Tender_Information_Form__c/recordTypes/Outfitters.recordType-meta.xml
<RecordType>
    <fullName>Outfitters</fullName>
    <active>true</active>
    <label>Outfitters</label>
</RecordType>